--- a/static/style/scss/animation.scss
+++ b/static/style/scss/animation.scss
@@ -69,7 +69,6 @@ display: block;
 list-style: none;
 width: 20px;
 height: 20px;
-background: #97e5ef;
 animation: animate 25s linear infinite;
 bottom: -150px;
 }
@@ -79,6 +78,8 @@ left: 25%;
 width: 80px;
 height: 80px;
 animation-delay: 0s;
+background: $px-openpo;
+
 }
     
     
@@ -88,6 +89,7 @@ width: 20px;
 height: 20px;
 animation-delay: 2s;
 animation-duration: 12s;
+background: $px-esplanade;
 }
     
 .circles li:nth-child(3){
@@ -95,6 +97,7 @@ left: 70%;
 width: 20px;
 height: 20px;
 animation-delay: 4s;
+background: $px-zalora;
 }
     
 .circles li:nth-child(4){
@@ -103,6 +106,7 @@ width: 60px;
 height: 60px;
 animation-delay: 0s;
 animation-duration: 18s;
+background: $px-huemail;
 }
     
 .circles li:nth-child(5){
@@ -110,6 +114,7 @@ left: 65%;
 width: 20px;
 height: 20px;
 animation-delay: 0s;
+background: $px-autodesk;
 }
     
 .circles li:nth-child(6){
@@ -117,6 +122,7 @@ left: 75%;
 width: 110px;
 height: 110px;
 animation-delay: 3s;
+background: $px-openpo;
 }
     
 .circles li:nth-child(7){
@@ -124,6 +130,7 @@ left: 35%;
 width: 150px;
 height: 150px;
 animation-delay: 7s;
+background: $px-esplanade;
 }
     
 .circles li:nth-child(8){
@@ -132,6 +139,7 @@ width: 25px;
 height: 25px;
 animation-delay: 15s;
 animation-duration: 45s;
+background: $px-zalora;
 }
     
 .circles li:nth-child(9){
@@ -140,6 +148,7 @@ width: 15px;
 height: 15px;
 animation-delay: 2s;
 animation-duration: 35s;
+background: $px-huemail;
 }
     
 .circles li:nth-child(10){
@@ -148,6 +157,7 @@ width: 150px;
 height: 150px;
 animation-delay: 0s;
 animation-duration: 11s;
+background: $px-autodesk;
 }
     
 @keyframes animate {
