--- a/static/style/scss/base.scss
+++ b/static/style/scss/base.scss
@@ -56,7 +56,7 @@ mark {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: $px-theme;
+	background: $px-dark;
 	z-index: 99999;
 }
 .load-circle {
@@ -106,8 +106,8 @@ h2,
 h3 {
 	font-family: $px-heading-font-family;
 	font-weight: $px-top-heading-weight;
-	letter-spacing: 0px;
-	text-transform: uppercase;
+	letter-spacing: -1px;
+	// text-transform: uppercase;
 }
 
 .h1,
@@ -159,8 +159,14 @@ h6 {
 	text-transform: uppercase;
 }
 
-.display-1 {
-	font-size: $px-h2-font;
+.display-text {
+	font-family: $px-display-font-family;
+}
+
+.small, small {
+	text-transform: uppercase;
+	color: $px-medium-dark;
+	font-size: $px-h6-font;
 }
 
 /* ----------------------
