move image to project folder

--- a/static/style/master.css
+++ b/static/style/master.css
@@ -4345,18 +4345,18 @@ h6 {
       background-image: url("../img/esplanade/esplanade_bg.png"); } }
 
 #zalora_project_overview {
-  background-image: url("../img/zalora_bg_sm.png");
+  background-image: url("../img/zalora/zalora_bg_sm.png");
   background-size: cover; }
   @media (min-width: 576px) {
     #zalora_project_overview {
-      background-image: url("../img/zalora_bg.png"); } }
+      background-image: url("../img/zalora/zalora_bg.png"); } }
 
 #autodesk_project_overview {
-  background-image: url("../img/autodesk_bg_sm.png");
+  background-image: url("../img/autodesk/autodesk_bg_sm.png");
   background-size: cover; }
   @media (min-width: 576px) {
     #autodesk_project_overview {
-      background-image: url("../img/autodesk_bg.jpg"); } }
+      background-image: url("../img/autodesk/autodesk_bg.png"); } }
 
 #huemail_project_overview {
   background-image: url("../img/huemail/huemail_bg_sm.png");
