--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -187,18 +187,18 @@
 }
 
 #zalora_project_overview {
-	background-image: url('../img/zalora_bg_sm.png');
+	background-image: url('../img/zalora/zalora_bg_sm.png');
 	background-size: cover;
 	@media (min-width: 576px) {
-		background-image: url('../img/zalora_bg.png');
+		background-image: url('../img/zalora/zalora_bg.png');
 	}
 }
 
 #autodesk_project_overview {
-	background-image: url('../img/autodesk_bg_sm.png');
+	background-image: url('../img/autodesk/autodesk_bg_sm.png');
 	background-size: cover;
 	@media (min-width: 576px) {
-		background-image: url('../img/autodesk_bg.jpg');
+		background-image: url('../img/autodesk/autodesk_bg.png');
 	}
 }
 
