--- a/static/style/scss/base.scss
+++ b/static/style/scss/base.scss
@@ -170,6 +170,10 @@ h6 {
 	font-size: $px-h6-font;
 }
 
+.strong, strong {
+	font-weight: $px-h5-h6-font-weight;
+}
+
 /* ----------------------
 *	owl 
 ---------------------------*/
