--- a/static/style/scss/button.scss
+++ b/static/style/scss/button.scss
@@ -1,6 +1,10 @@
 /*----------------------------------
 * Buttons
 ----------------------------------*/
+a[role=button] {
+	text-decoration: none;
+}
+
 .m-btn-link {
 	display: inline-block;
 	text-decoration: none;
@@ -217,66 +221,6 @@
 		a {
 			border-radius: 3px;
 		}
-	}
-}
-
-
-.video-btn {
-    position: relative;
-    width: 80px;
-    height: 80px;
-    text-align: center;
-    display: inline-block;
-    vertical-align: middle;
-    border-radius: 50%;
-    @include transition(ease all 0.55s);
-    z-index: 1;
-    border: none;
-    &:after {
-		content: "";
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		margin: auto;
-		border-radius: 50%;
-		animation: pulse-border 1500ms ease-out infinite;
-		pointer-events: none;
-		z-index: -1;
-	}
-	&.white {
-		background: $px-white;
-		&:after {
-			background: $px-white;
-		}
-		span {
-			color:$px-theme;
-		}
-	}
-	&.theme {
-		background: $px-theme;
-		&:after {
-			background: $px-theme;
-		}
-		span {
-			color:$px-white;
-		}
-	}
-
-
-	span {
-	    border-top: 15px solid transparent;
-	    border-bottom: 15px solid transparent;
-	    border-left: 20px solid currentcolor;
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 9px;
-	    right: 0;
-	    margin: auto;
-	    width: 0px;
-	    height: 0px;
 	}
 }
 
